; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/keyboard/extr_tm2-touchkey.c_tm2_touchkey_power_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/keyboard/extr_tm2-touchkey.c_tm2_touchkey_power_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm2_touchkey_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tm2_touchkey_data*)* @tm2_touchkey_power_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tm2_touchkey_power_enable(%struct.tm2_touchkey_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tm2_touchkey_data*, align 8
  %4 = alloca i32, align 4
  store %struct.tm2_touchkey_data* %0, %struct.tm2_touchkey_data** %3, align 8
  %5 = load %struct.tm2_touchkey_data*, %struct.tm2_touchkey_data** %3, align 8
  %6 = getelementptr inbounds %struct.tm2_touchkey_data, %struct.tm2_touchkey_data* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @ARRAY_SIZE(i32 %7)
  %9 = load %struct.tm2_touchkey_data*, %struct.tm2_touchkey_data** %3, align 8
  %10 = getelementptr inbounds %struct.tm2_touchkey_data, %struct.tm2_touchkey_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @regulator_bulk_enable(i32 %8, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = call i32 @msleep(i32 150)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @regulator_bulk_enable(i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
